--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer ></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <h1>Etch-A-Sketch</h1>
+
     <div id="container"></div>
 
 </body>
