Add footer and containers for future buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     
     <h1>Etch-A-Sketch</h1>
-
-    <div id="container"></div>
+    <div id="game">
+        <div id="left-menu"></div>
+        <div id="container"></div>
+        <div id="right-menu"></div>
+    </div>
+    <div class="footer">
+        <p>Copyright. Matthew Y Productions</p>
+    </div>
 
 </body>
 </html>
