--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>Etch-A-Sketch</h1>
     <div id="game">
         <div id="left-menu"></div>
+            <div class="slider-container">
+                <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100"/>
+                <label for="sizeSlider">Pick a Size</label>
+            </div>
         <div id="container"></div>
         <div id="right-menu"></div>
     </div>
