--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     
     <h1>Etch-A-Sketch</h1>
     <div id="game">
-        <div id="left-menu"></div>
+        <div id="left-menu">
             <div class="slider-container">
                 <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100"/>
                 <label for="sizeSlider">Pick a Size</label>
             </div>
+        </div>
         <div id="container"></div>
-        <div id="right-menu"></div>
+        <div id="right-menu">
+            <button type="button">Reset</button>
+        </div>
     </div>
     <div class="footer">
         <p>Copyright. Matthew Y Productions</p>
