Improve reset button and loading
Reset button wipes the container but maintains the
size at the previous value. Game now loads at a
default value of 4x4.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="game">
         <div id="left-menu">
             <div class="slider-container">
-                <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100"/>
+                <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100" value="4"/>
                 <label for="sizeSlider">Pick a Size</label>
             </div>
         </div>
         <div id="container"></div>
         <div id="right-menu">
-            <button type="button">Reset</button>
+            <button type="button" id="resetButton">Reset</button>
         </div>
     </div>
     <div class="footer">
