Add button that randomly changes color

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div id="game">
         <div id="left-menu">
             <div class="slider-container">
-                <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100" value="4"/>
+                <input type="range" id="sizeSlider" name="sizeSlider" min="1" max="100"/>
                 <label for="sizeSlider">Pick a Size</label>
             </div>
+            <button type="button" id="randomColor">Randomize Color</button>
         </div>
         <div id="container"></div>
         <div id="right-menu">
