Add rainbow mode and opacity feature
Add rainbow mode which allows you to add a
different color each time you hover over a square.

Add opacity feature that makes squares start at
low opacity and then progressively darken as you
hover over them.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <label for="sizeSlider">Pick a Size</label>
             </div>
             <button type="button" id="randomColor">Randomize Color</button>
+            <button type="button" id="rainbowColor">Rainbow Mode</button>
+            <button type="button" id="regularMode">Regular Mode</button>
         </div>
         <div id="container"></div>
         <div id="right-menu">
